--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,14 @@
 }
 
 body{
-   width: 50%;
+   
    margin: auto;
    font-family: 'Fredoka', sans-serif;
+}
+
+.container{
+    width: 80%;
+    margin: auto;
 }
 
 header{
@@ -21,25 +26,56 @@ h1{
 }
 
 .col{
-    margin-top: 60px;
+    
     float: left;
     width: calc(100% / 3);
-    padding: 20px;
+    color: white;
+    padding: 60px 10px;
 }
 
 
 
 
 .col img {
-    height: 100px;
+  width: 100%;
+
+    
 }
 
-.col2{
-    margin-top: 60px;
+.clearfix::after{
+    content: '';
+    clear: both;
+    display: table;
+}
+
+
+.immagine{
+    width: 30%;
     float: left;
-    width: calc(100% / 3);
-    padding: 20px;
-    height: 100px;
+}
+
+.contenuto{
+    width: 70%;
+    float: right;
+    font-size: 12px;
+    padding-left: 8px;
+    
+
+}
+
+.contenitore{
     background-color: black;
-    color: white;
+}
+
+h3{
+    padding-top: 8px;
+    padding-bottom: 5px;
+}
+
+p{
+    padding-bottom: 8px;
+}
+
+.blue{
+    color: blue;
 }
